--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "rocket-accept-language"
-version = "0.2.3"
+version = "0.2.4"
 authors = ["Magic Len <len@magiclen.org>"]
 repository = "https://github.com/magiclen/rocket-accept-language"
 homepage = "https://magiclen.org/rocket-accept-language"
 keywords = ["rocket", "server", "web", "i18n", "http"]
-categories = ["parsing", "localization"]
+categories = ["parsing", "localization", "web-programming"]
 description= "This crate provides a request guard used for getting `accept-language` header."
 readme = "README.md"
 license = "MIT"
