--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ description= "This crate provides a request guard used for getting `accept-langu
 readme = "README.md"
 license = "MIT"
 
-[badges]
-travis-ci = { repository = "magiclen/rocket-accept-language", branch = "master" }
+[badges.travis-ci]
+repository = "magiclen/rocket-accept-language"
+branch = "master"
 
 [dependencies]
 rocket = "0.4"
