--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rocket-accept-language"
-version = "0.7.0"
+version = "0.7.1"
 authors = ["Magic Len <len@magiclen.org>"]
 edition = "2018"
 repository = "https://github.com/magiclen/rocket-accept-language"
@@ -10,6 +10,7 @@ categories = ["parser-implementations", "localization", "web-programming"]
 description= "This crate provides a request guard used for getting `accept-language` header."
 readme = "README.md"
 license = "MIT"
+include = ["src/**/*", "Cargo.toml"]
 
 [badges.travis-ci]
 repository = "magiclen/rocket-accept-language"
