--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rocket-accept-language"
-version = "0.7.3"
+version = "0.8.0"
 authors = ["Magic Len <len@magiclen.org>"]
 edition = "2018"
 repository = "https://github.com/magiclen/rocket-accept-language"
@@ -17,7 +17,7 @@ repository = "magiclen/rocket-accept-language"
 branch = "master"
 
 [dependencies]
-rocket = "0.4.2"
+rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev" }
 accept-language = "2"
 unic-langid = { version = "0.9", features = ["macros"] }
 unic-langid-macros = "0.9"
