--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 repository = "https://github.com/magiclen/rocket-accept-language"
 homepage = "https://magiclen.org/rocket-accept-language"
 keywords = ["rocket", "server", "web", "i18n", "http"]
-categories = ["parser-implementations", "localization", "web-programming"]
+categories = ["web-programming", "localization"]
 description = "This crate provides a request guard used for getting `accept-language` header."
 readme = "README.md"
 license = "MIT"
