--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ license = "MIT"
 include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]
 
 [dependencies]
-rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev" }
+rocket = "0.5.0-rc.1"
 accept-language = "2"
 unic-langid = { version = "0.9", features = ["macros"] }
 unic-langid-macros = "0.9"
