--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rocket-accept-language"
-version = "0.8.4"
+version = "0.8.5"
 authors = ["Magic Len <len@magiclen.org>"]
 edition = "2021"
 rust-version = "1.69"
@@ -13,8 +13,7 @@ license = "MIT"
 include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]
 
 [dependencies]
-rocket = "0.5.0-rc.4"
+rocket = "0.5"
 accept-language = "3"
 unic-langid = { version = "0.9", features = ["macros"] }
 unic-langid-macros = "0.9"
-tinystr = "0.3"
